@@ -1,3 +1,0 @@
-This project can be used to generate C bindings for Rust code. It
-is currently being developed to support creating bindings for
-WebRender, but has been designed to support any project.
