@@ -1,2 +1,0 @@
-@comment $NetBSD: PLIST,v 1.1 2018/10/23 23:01:33 maya Exp $
-bin/cbindgen
